--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URI=mongodb+srv://nssudarshan2004_db_user:72a4zqhf51l4gLgb@cluster0.cwzlbky.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://nssudarshan2004_db_user:72a4zqhf51l4gLgb@cluster0.cwzlbky.mongodb.net/freightify_trial_db?retryWrites=true&w=majority&appName=Cluster0
