--- a/backend/air.toml
+++ b/backend/air.toml
@@ -1,9 +1,29 @@
-root = "." # The root directory of the project
-tmp_dir = "tmp" # The temporary directory where air will store its temporary files
+# .air.toml
 
-[build] # The build configuration
-  bin = "main" # The name of the binary file to be generated after building the project
-  cmd = "go build -o {{.Output}} {{.Input}}" # The command to build the project
-  exclude = ["tmp/*", "client/*"]  # Specifies the directories to be excluded from monitoring for changes
-  include = ["**/*.go"] # Specifies the file patterns to be included for monitoring.
-  ignore = ["tmp/*"] # Specifies the files or directories to be ignored when triggering a build.
+# Working directory
+root = "."
+tmp_dir = "tmp"
+
+[build]
+  # Command to build your Gin app
+  cmd = "go build -o ./tmp/main ."
+  # Binary to run
+  bin = "./tmp/main"
+  # Include only .go, .mod, and .env files
+  include_ext = ["go", "tpl", "tmpl", "html"]
+  # Ignore vendor directory
+  exclude_dir = ["tmp", "vendor"]
+  # Delay after file changes
+  delay = 1000 # ms
+
+[log]
+  time = true
+
+[color]
+  main = "yellow"
+  watcher = "cyan"
+  build = "green"
+  runner = "magenta"
+
+[misc]
+  clean_on_exit = true
