Progress: 1. The edit operation is working successfully.
Next Steps:
1. The user Teams chosen by user is not reflectiong in the frontend while editing.
2. Enable view operation.
3. Enable delete operation.
4. Enable data validation
5. Enable automatic refresh
6. Search and Filter ops

--- a/backend/air.toml
+++ b/backend/air.toml
@@ -6,11 +6,11 @@ tmp_dir = "tmp"
 
 [build]
   # Command to build your Gin app
-  cmd = "go build -o ./tmp/main ."
+  cmd = "go build -o tmp/main ."
   # Binary to run
-  bin = "./tmp/main"
+  bin = "tmp/main"
   # Include only .go, .mod, and .env files
-  include_ext = ["go", "tpl", "tmpl", "html"]
+  include_ext = ["go", "tpl", "tmpl", "html", "env"]
   # Ignore vendor directory
   exclude_dir = ["tmp", "vendor"]
   # Delay after file changes
